--- a/ClimateControlSystem/Android/ClimateControl/app/src/main/res/layout/activity_climate_control.xml
+++ b/ClimateControlSystem/Android/ClimateControl/app/src/main/res/layout/activity_climate_control.xml
@@ -73,18 +73,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Switch
-        android:text="AUTO"
-        android:layout_width="155dp"
-        android:layout_height="60dp"
-        android:id="@+id/switch_Auto"
-        android:textSize="40sp"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/imageButtonDec"
-        android:layout_alignLeft="@+id/imageButtonDec"
-        android:layout_alignStart="@+id/imageButtonDec"
-        android:layout_marginTop="58dp" />
-
     <ImageButton
         app:srcCompat="@drawable/up"
         android:id="@+id/imageButtonInc"
@@ -159,4 +147,17 @@
         android:layout_below="@+id/imageButtonInc"
         android:layout_alignRight="@+id/switch_Heat"
         android:layout_alignEnd="@+id/switch_Heat" />
+
+    <TextView
+        android:text="F"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/txt_PI_Temp"
+        android:layout_toEndOf="@+id/txt_PI_Temp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginStart="17dp"
+        android:id="@+id/text_F"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"/>
 </RelativeLayout>
