--- a/EnergyManagementSystem/EnergyMonitor/app/src/main/res/layout/activity_device_list.xml
+++ b/EnergyManagementSystem/EnergyMonitor/app/src/main/res/layout/activity_device_list.xml
@@ -18,6 +18,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="normal|bold" />
 
     <Button
         android:layout_width="wrap_content"
