--- a/ClimateControlSystem/Android/ClimateControl/app/src/main/res/layout/activity_climate_control.xml
+++ b/ClimateControlSystem/Android/ClimateControl/app/src/main/res/layout/activity_climate_control.xml
@@ -14,18 +14,6 @@
 
 
     <TextView
-        android:text="75"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txt_Exterior_Temp"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="25sp"
-        android:layout_alignBaseline="@+id/lbl_Exterior_Temp"
-        android:layout_alignBottom="@+id/lbl_Exterior_Temp"
-        android:layout_toEndOf="@+id/lbl_Exterior_Temp"
-        android:layout_toRightOf="@+id/lbl_Exterior_Temp" />
-
-    <TextView
         android:text="Humidity:"
         android:textColor="@android:color/white"
         android:textSize="30sp"
@@ -138,6 +126,44 @@
         android:layout_marginEnd="11dp" />
 
     <TextView
+        android:text="o"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_degree"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
+        android:layout_alignBaseline="@+id/txt_Temp"
+        android:layout_alignBottom="@+id/txt_Temp"
+        android:layout_alignRight="@+id/txt_Exterior_Temp"
+        android:layout_alignEnd="@+id/txt_Exterior_Temp" />
+
+    <TextView
+        android:text="F"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:id="@+id/text_F"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"
+        android:layout_alignTop="@+id/text_degree"
+        android:layout_toRightOf="@+id/text_degree"
+        android:layout_toEndOf="@+id/text_degree" />
+
+    <TextView
+        android:text="75"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_Exterior_Temp"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="25sp"
+        android:layout_alignBottom="@+id/lbl_Exterior_Temp"
+        android:layout_toRightOf="@+id/lbl_Exterior_Temp"
+        android:layout_toEndOf="@+id/lbl_Exterior_Temp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp" />
+
+    <TextView
         android:text="00"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -145,19 +171,6 @@
         android:textSize="125sp"
         android:id="@+id/txt_PI_Temp"
         android:layout_below="@+id/imageButtonInc"
-        android:layout_alignRight="@+id/switch_Heat"
-        android:layout_alignEnd="@+id/switch_Heat" />
-
-    <TextView
-        android:text="F"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/txt_PI_Temp"
-        android:layout_toEndOf="@+id/txt_PI_Temp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:id="@+id/text_F"
-        android:textColor="@android:color/white"
-        android:textSize="50sp"/>
+        android:layout_toLeftOf="@+id/text_degree"
+        android:layout_toStartOf="@+id/text_degree" />
 </RelativeLayout>
